quick fix text fot countdown

--- a/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
+++ b/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
@@ -39,6 +39,9 @@
           $(".banner-title").first().hide()
           $(".spacer").hide()
           $(".banner-message").hide()
+          $(".banner-title:last span").first().text("UP TO 50% OFF SITE WIDE -")
+          $(".banner-title:last span").first().css("margin-right","5px")
+          $(".banner-title:last span:nth-child(2)").text("ENDS TODAY")
         }
       }
       catch (err) {
