[update][style quiz] tweak fixes:   - error message [ wip/not markup]   - sizes dependable from current site version   - profile details import   - user events import from fb

--- a/engines/style_quiz/app/views/style_quiz/questions/body_size_shape.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/body_size_shape.html.slim
@@ -17,9 +17,10 @@
             .checkmark
     h2.text-center Select your size.
     .size-picker
+      - offset = current_site_version.size_settings.size_start
       - question.answers.where(group: 'size').each do |answer|
         .size class=(@user_style_profile.selected?(answer) ? 'selected' : '') data-value=(answer.id)
-          = answer.name
+          = (answer.name.to_i + offset).to_s
     .row
       .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
       .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
