Guard against bad orders

--- a/app/views/admin/shipments/_tracking_number_update_form.html.slim
+++ b/app/views/admin/shipments/_tracking_number_update_form.html.slim
@@ -1,4 +1,4 @@
-- if shipment
+- if shipment.present?
   - if shipment.order.can_ship?
     = form_for shipment, url: main_app.admin_shipment_path(shipment.id), remote: true, html: { class: 'shipment_tracking_number_form' } do |f|
       = f.hidden_field :id
