update to select2 4.0.0, fixes translations error

--- a/app/views/layouts/redesign/_javascript.html.erb
+++ b/app/views/layouts/redesign/_javascript.html.erb
@@ -1,4 +1,4 @@
-<script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/js/select2.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.full.min.js"></script>
 
 <!-- bootstrap -->
 <script type="text/javascript">
