--- a/engines/style_quiz/app/views/style_quiz/questions/events_form.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/events_form.html.slim
@@ -29,7 +29,7 @@
     
     .row.events-list
       = @user_style_profile.events.each do |event|
-        .event.col-4 data-id=(event.id) data-date=(event.date.to_s(:db)) data-name=(event.name)
+        .event.col-4 data-id=(event.id) data-date=(event.date.strftime(I18n.t('date_format.backend'))) data-name=(event.name)
           .event-tag
             span = "#{ event.date.to_s(:db) } - #{ event.name }"
             .icon-cross data-action='delete-event'
