--- a/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
@@ -1,5 +1,5 @@
 / Signup question
-- date_format = I18n.t('date.formats.default')
+- date_format = I18n.t('date_format.backend')
 form.quiz-section id="#{ question.name }-question"
   .quiz-section-title
     h4.quiz-section-number Question #{ question_position }/#{ question_total }
