--- a/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_vars.css.scss
+++ b/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_vars.css.scss
@@ -24,7 +24,7 @@ $pink-bg: #eeddf0;
 
 // Form
 $quiz-form-control-height: 45px;
-$quiz-form-control-bg-focus: #faffbd;
+$quiz-form-control-bg-focus: transparent;
 $quiz-form-width: 370px;
 // @end Form
 // -----------------
