--- a/engines/style_quiz/app/views/style_quiz/questions/sexyness_importance.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/sexyness_importance.html.slim
@@ -9,6 +9,7 @@
     .rank-sexy.rank-box
       - question.answers.each do |answer|
         .rank-cell data-value=(answer.id)
+          .checkmark.checkmark-lg
           .rank-item class="rank-sexy-item-#{ answer.value } #{ @user_style_profile.selected?(answer) ? 'active' : '' }"
     .row
       .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
