--- a/engines/style_quiz/app/views/style_quiz/questions/fashion_importance.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/fashion_importance.html.slim
@@ -7,9 +7,9 @@
   .grid-container
     .rank-fasion.rank-box
       - question.answers.each do |answer|
-        .rank-cell data-value=(answer.id)
+        .rank-cell data-value=(answer.id) class=( @user_style_profile.selected?(answer) ? 'selected' : '' )
           .checkmark.checkmark-lg
-          .rank-item class="rank-fasion-item-#{ answer.value } #{ @user_style_profile.selected?(answer) ? 'active' : ''}"
+          .rank-item class="rank-fasion-item-#{ answer.value } "
     .row
       .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
       .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
