--- a/app/views/layouts/redesign/mega_menu/_shop.html.slim
+++ b/app/views/layouts/redesign/mega_menu/_shop.html.slim
@@ -22,7 +22,7 @@ li.shop.menu-item
     .mega-menu--secondary
       - if sale_active?
         = link_to dresses_path, class: 'mega-menu-banner' do
-          = image_tag 'mega-menu/sale.jpg', alt: '15% Off New Season Sale', class: 'img-responsive'
+          = image_tag 'mega-menu/sale.jpg', alt: '50% Off Sale', class: 'img-responsive'
 
       .container-fluid.max-width-100
         .row
