[mkt] Sale tweaks

--- a/app/views/layouts/redesign/mega_menu/_shop.html.slim
+++ b/app/views/layouts/redesign/mega_menu/_shop.html.slim
@@ -20,7 +20,7 @@ li.shop.menu-item
           /     span.fit-guarantee.menu-icon
           /     | Fit Guarantee
     .mega-menu--secondary
-      - if sale_active?
+      - if sale_active? && current_site_version.is_usa?
         = link_to dresses_path, class: 'mega-menu-banner' do
           = image_tag 'mega-menu/sale.jpg', alt: '50% Off Sale', class: 'img-responsive'
 
