--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -1,5 +1,5 @@
 - if sale_active?
-  #sale-banner.alert-sale.alert-relative role="alert" style="text-transform:uppercase;font-size:1.333333em;text-align:center;background-color:#E02D91"
+  #sale-banner.alert-sale.alert-relative role="alert" style="text-transform:uppercase;font-size:1.333333em;text-align:center;background-color:#FD0C39"
     span.medium.banner-title
       .center-block
         span style="margin-right:15px;color:white;" UP TO 50% OFF SITE WIDE.
