[fix] Hide countdown

--- a/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
+++ b/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
@@ -41,7 +41,7 @@
 
   = content_for :inline_javascript do
     = raw enable_countdown_banner
-    = raw enable_countdown_banner_sale
+    / = raw enable_countdown_banner_sale
 
 #countdown-banner.alert-sale.alert-relative.hidden role="alert"
   a.close href="#"
