--- a/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
@@ -14,7 +14,7 @@ form.quiz-section id="#{ question.name }-question"
               input.form-control type="text" name="fullname" placeholder="john smith" value=(@user_style_profile.fullname) required="required"
             .form-group
               label date of birth
-              input.form-control type="text" name="birthday" placeholder=(20.years.ago.strftime(date_format)) value=(@user_style_profile.birthday.try(:strftime, date_format)) required="required"
+              input.form-control type="text" name="birthday" placeholder=(I18n.t('date_format.frontend')) value=(@user_style_profile.birthday.try(:strftime, date_format)) required="required"
             .form-group
               label email address
               input.form-control type="email" name="email" placeholder="email@example.com" value=(@user_style_profile.email) required="required"
