[fix] fix small JS errors on search
This code was printing HTML encoded characters like &#39;

--- a/app/views/products/base/search.html.slim
+++ b/app/views/products/base/search.html.slim
@@ -10,7 +10,7 @@ ruby:
 
 = content_for :inline_javascript do
   = raw "$('.img-product').hoverable();"
-  = init_product_collection_moodboard_links
+  = raw init_product_collection_moodboard_links
 
 .page-title.default style="background-color:#EDDCEF;"
   .container
