reset webkit autofill input background

--- a/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_base.css.scss
+++ b/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_base.css.scss
@@ -26,6 +26,9 @@ h4 {
 label {
   text-transform: uppercase;
 }
+input:-webkit-autofill {
+  background-color: $quiz-form-control-bg-focus !important;
+}
 // @end Setup
 // -----------------
 
